# rust-axum-backend

./: .gitignore  README.md
axum-crud/: .env  Cargo.toml
axum-crud/.cargo/: config.toml
axum-crud/migrations/: 20240421035006_foods_table.sql
axum-crud/src/: config.rs  crud_fns.rs  crud_routes.rs  envs.rs  error.rs  main.rs  store.rs  utils.rs
gulp-/: Cargo.toml  README.md
gulp-/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
gulp-/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
gulp-/tests/: quick_dev.rs
unrust1/: Cargo.toml  README.md
unrust1/.cargo/: config.toml
unrust1/examples/: quick_dev.rs
unrust1/sql/dev_initial/: 00-recreate-db.sql  01-create-schemas.sql  02-dev-seed.sql
unrust1/src/: config.rs  error.rs  main.rs
unrust1/src/_dev_utils/: dev_db.rs  mod.rs
unrust1/src/ctx/: ctx.rs  error.rs  mod.rs
unrust1/src/log/: log.rs
unrust1/src/model/: base.rs  mod.rs  task.rs
unrust1/src/web/: mod.rs  routes_login.rs  routes_static.rs  routes_ticket.rs
unrust1/src/web/middlewares/: auth.rs  res_map.rs
unrust1/web-folder/: index.html
unrust1/web-folder/login/: index.html
unrust2/: Cargo.toml
unrust2/src/: main.rs
unrust2/src/web/: routes_login.rs
unrust2/tests/: quick_dev.rs
