[package]
name = "axum-crud"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"
sqlx = { version = "0.7", features = ["postgres","runtime-tokio","tls-rustls","uuid","time"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.8", features = ["v4", "v7", "fast-rng"] }
data-encoding = "2.5" # base64, base64url, base32hex
base58 = "0.2"
