[package]
name = "gulp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }

#---- JSON
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.4.0"

#---- Web
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tower-cookies = "0.10.0"

#---- Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

#---- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#---- Others
lazy-regex = "3.1.0"
async-trait = "0.1.77"
strum_macros = "0.25.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"
